# network_automation

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
network_automation/: netbox.py
src/: cisco.py  netbox.py
tests/: __init__.py  mock_data_cisco.json  mock_data_netbox.json  test_cisco.py  test_netbox.py  test_utils.py
