[project]
name = "network-automation"
version = "0.0.1"
authors = [
    { name = "Bogdan Radu" }
]
dependencies = [
    "mydict~=2.1.0"
]
description = "Network Automation Library"
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file=["README.md"], content-type="text/markdown"}

[build-system]
requires = ["setuptools>=61.3"]
build-backend = "setuptools.build_meta"
