[project]
name = "network-automation"
version = "0.0.1"
authors = [
    { name = "Bogdan Radu" }
]
dependencies = [
    "mydict~=2.1.0"
]
description = "Network Automation Library"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.3"]
build-backend = "setuptools.build_meta"
