[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "network_automation"
version = "0.0.6"
license = "GPL-3.0-or-later"
description = "Network Automation Library"
authors = [
    { name = "Bogdan Radu" }
]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
mydict = "2.1.0"
python-dotenv = ">1.0.0"
